[gd_scene load_steps=10 format=3 uid="uid://383vp3jf8417"]

[ext_resource type="Script" path="res://Scenes/Dialogue/dialogue.gd" id="1_cmfh0"]
[ext_resource type="Texture2D" uid="uid://bctmmnep1083p" path="res://Graphics/Dialogue/Kag/spritesheet.png" id="2_7rlrd"]
[ext_resource type="Texture2D" uid="uid://0yak3a2pwv7w" path="res://Graphics/Dialogue/Dialogue Box.png" id="2_hvfeh"]
[ext_resource type="Texture2D" uid="uid://ckkkfg1aiwsyv" path="res://Graphics/Dialogue/placeholder/image.png" id="3_d3v05"]
[ext_resource type="Theme" uid="uid://evn1ieub8mq7" path="res://ourple.tres" id="3_pbnsd"]
[ext_resource type="FontFile" uid="uid://cwhyduvyjoy24" path="res://Graphics/UI/Pixeltype.ttf" id="3_rl0hr"]
[ext_resource type="Script" path="res://Scenes/Dialogue/kag.gd" id="3_tcosv"]
[ext_resource type="AudioStream" uid="uid://3ulypp8n3fjo" path="res://Audio/gabe-bark.mp3" id="7_m8igw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uyxkx"]
atlas = ExtResource("2_7rlrd")
region = Rect2(0, 0, 128, 128)

[node name="Dialogue" type="Control" node_paths=PackedStringArray("dialogueComponents")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmfh0")
dialogueComponents = [null]

[node name="Kag" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -410.0
offset_top = 34.0
offset_right = -282.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_uyxkx")
script = ExtResource("3_tcosv")

[node name="Mitsu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 260.0
offset_top = 34.0
offset_right = 598.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.389394, 0.389394)
texture = ExtResource("3_d3v05")

[node name="DialoguePanel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 480.0
offset_bottom = 255.0
grow_vertical = 2
texture = ExtResource("2_hvfeh")

[node name="Name" type="Label" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -101.0
offset_right = 220.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_pbnsd")
theme_type_variation = &"DialogueName"
text = "momiji"

[node name="Dialogue" type="Label" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -78.0
offset_right = 210.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_pbnsd")
theme_type_variation = &"DialogueBody"
theme_override_fonts/font = ExtResource("3_rl0hr")
theme_override_font_sizes/font_size = 16
text = "momimomimomimomimomimomimomimomimomimomimomimomimomimomimomimomimomimomimomimomimomi"
autowrap_mode = 2

[node name="SoundLib" type="Node" parent="."]

[node name="Default" type="AudioStreamPlayer" parent="SoundLib"]
stream = ExtResource("7_m8igw")

[node name="SpeakDelay" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="SpeakDelay" to="." method="_on_speak_delay_timeout"]
